--- a/web/sites/mobile-msw/config/sync/core.extension.yml
+++ b/web/sites/mobile-msw/config/sync/core.extension.yml
@@ -59,6 +59,7 @@ module:
   mobile_sponsor_list: 0
   mobile_sponsor_list_v2: 0
   mobile_terms_of_use: 0
+  msw_config: 0
   node: 0
   options: 0
   paragraphs: 0
