[DFMLD-45] - PTPlus game provider integration config

--- a/web/sites/mobile-live-dealer/config/sync/field.storage.node.field_game_provider.yml
+++ b/web/sites/mobile-live-dealer/config/sync/field.storage.node.field_game_provider.yml
@@ -62,6 +62,9 @@ settings:
     -
       value: jsystem
       label: JSystem
+    -
+      value: ptplus
+      label: PTPlus
   allowed_values_function: ''
 module: options
 locked: false
