NBMLD-19 NBLD-71 nextbet cq9 integration

--- a/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider_live_dealer.yml
+++ b/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider_live_dealer.yml
@@ -32,6 +32,9 @@ settings:
     -
       value: micro_gaming
       label: Microgaming
+    -
+      value: cq9
+      label: CQ9
   allowed_values_function: ''
 module: options
 locked: false
