--- a/web/sites/ptplus/config/sync/core.entity_form_display.taxonomy_term.games_category.default.yml
+++ b/web/sites/ptplus/config/sync/core.entity_form_display.taxonomy_term.games_category.default.yml
@@ -3,9 +3,13 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.taxonomy_term.games_category.field_enable_pagination
+    - field.field.taxonomy_term.games_category.field_enable_show_all
     - field.field.taxonomy_term.games_category.field_game_tile_image_size
+    - field.field.taxonomy_term.games_category.field_game_tile_layout_row
     - field.field.taxonomy_term.games_category.field_games_alias
     - field.field.taxonomy_term.games_category.field_games_category_logo
+    - field.field.taxonomy_term.games_category.field_platform
     - field.field.taxonomy_term.games_category.field_publish_date
     - field.field.taxonomy_term.games_category.field_unpublish_date
     - image.style.thumbnail
@@ -23,7 +27,7 @@ third_party_settings:
         - description
         - field_unpublish_date
       parent_name: ''
-      weight: 4
+      weight: 10
       format_type: details
       format_settings:
         id: ''
@@ -44,8 +48,28 @@ content:
       placeholder: ''
       rows: 5
     third_party_settings: {  }
+  field_enable_pagination:
+    weight: 6
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_enable_show_all:
+    weight: 7
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
   field_game_tile_image_size:
-    weight: 11
+    weight: 5
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_game_tile_layout_row:
+    weight: 8
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -65,6 +89,12 @@ content:
       preview_image_style: thumbnail
     third_party_settings: {  }
     type: image_image
+    region: content
+  field_platform:
+    weight: 9
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
     region: content
   field_publish_date:
     weight: 8
