--- a/web/sites/ptplus/config/sync/node.type.ptplus.yml
+++ b/web/sites/ptplus/config/sync/node.type.ptplus.yml
@@ -21,9 +21,9 @@ third_party_settings:
     unpublish_enable: false
     unpublish_required: false
     unpublish_revision: false
-name: ptplus
+name: Games
 type: ptplus
-description: ptplus
+description: 'List of Games'
 help: ''
 new_revision: true
 preview_mode: 1
