--- a/web/sites/ow-sports/config/sync/core.extension.yml
+++ b/web/sites/ow-sports/config/sync/core.extension.yml
@@ -45,6 +45,7 @@ module:
   metatag: 0
   metatag_open_graph: 0
   node: 0
+  node_revision_delete: 0
   options: 0
   owsports_config: 0
   paragraphs: 0
