--- a/web/sites/ow-sports/config/sync/node.type.page.yml
+++ b/web/sites/ow-sports/config/sync/node.type.page.yml
@@ -4,10 +4,12 @@ status: true
 dependencies:
   module:
     - menu_ui
+    - node_revision_delete
     - scheduler
 third_party_settings:
   menu_ui:
     available_menus:
+      - owsports-menu-vn
       - owsports-menu
       - owsports-menu-ch
       - owsports-menu-en
@@ -20,7 +22,6 @@ third_party_settings:
       - owsports-menu-pl
       - owsports-menu-sc
       - owsports-menu-th
-      - owsports-menu-vn
     parent: 'owsports-menu:'
   scheduler:
     expand_fieldset: when_required
@@ -33,6 +34,10 @@ third_party_settings:
     unpublish_enable: true
     unpublish_required: false
     unpublish_revision: false
+  node_revision_delete:
+    minimum_revisions_to_keep: 3
+    minimum_age_to_delete: 0
+    when_to_delete: 0
 _core:
   default_config_hash: KuyA4NHPXcmKAjRtwa0vQc2ZcyrUJy6IlS2TAyMNRbc
 name: 'Basic page'
