[DFMCCL-55] - Mobile casino ptplus provider integration config

--- a/web/sites/mobile-casino/config/sync/core.entity_view_display.node.games.default.yml
+++ b/web/sites/mobile-casino/config/sync/core.entity_view_display.node.games.default.yml
@@ -108,6 +108,7 @@ content:
     type: boolean
     region: content
 hidden:
+  field_game_provider: true
   field_keywords: true
   langcode: true
   links: true
