--- a/web/sites/mobile-casino/config/sync/views.view.games_list.yml
+++ b/web/sites/mobile-casino/config/sync/views.view.games_list.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.storage.node.field_game_code
     - field.storage.node.field_game_filter
     - field.storage.node.field_game_platform
+    - field.storage.node.field_game_provider
     - field.storage.node.field_game_ribbon
     - field.storage.node.field_games_list_category
     - field.storage.node.field_games_list_thumb_img_small
@@ -26,6 +27,7 @@ dependencies:
     - rest_views
     - serialization
     - taxonomy
+    - webcomposer_optimized_rest
     - webcomposer_rest_extra
 id: games_list
 label: 'Games - List'
@@ -2195,6 +2197,68 @@ display:
           delta_first_last: false
           field_api_classes: 0
           plugin_id: field_export
+        field_game_provider:
+          id: field_game_provider
+          table: node__field_game_provider
+          field: field_game_provider
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: list_key
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
       defaults:
         fields: false
         sorts: false
@@ -2247,6 +2311,7 @@ display:
         - 'config:field.storage.node.field_game_code'
         - 'config:field.storage.node.field_game_filter'
         - 'config:field.storage.node.field_game_platform'
+        - 'config:field.storage.node.field_game_provider'
         - 'config:field.storage.node.field_game_ribbon'
         - 'config:field.storage.node.field_games_list_category'
         - 'config:field.storage.node.field_games_list_thumb_img_small'
