--- a/web/sites/casino/config/sync/core.entity_form_display.node.game.default.yml
+++ b/web/sites/casino/config/sync/core.entity_form_display.node.game.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.node.game.field_game_info
     - field.field.node.game.field_game_info_toggle
     - field.field.node.game.field_game_keywords
+    - field.field.node.game.field_game_provider
     - field.field.node.game.field_game_title
     - field.field.node.game.field_game_type
     - field.field.node.game.field_games_category
@@ -49,6 +50,7 @@ third_party_settings:
     group_game_langu:
       children:
         - field_play_for_fun_toggle
+        - field_game_provider
         - field_game_code
         - field_game_type
       parent_name: ''
@@ -83,7 +85,7 @@ bundle: game
 mode: default
 content:
   field_game_code:
-    weight: 12
+    weight: 13
     settings:
       size: 60
       placeholder: ''
@@ -144,6 +146,12 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_game_provider:
+    type: options_select
+    weight: 12
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_game_title:
     weight: 2
     settings:
@@ -153,7 +161,7 @@ content:
     type: string_textarea
     region: content
   field_game_type:
-    weight: 13
+    weight: 14
     settings: {  }
     third_party_settings: {  }
     type: options_buttons
