--- a/web/sites/casino/config/sync/core.entity_view_display.node.game.default.yml
+++ b/web/sites/casino/config/sync/core.entity_view_display.node.game.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.node.game.field_game_info
     - field.field.node.game.field_game_info_toggle
     - field.field.node.game.field_game_keywords
+    - field.field.node.game.field_game_provider
     - field.field.node.game.field_game_title
     - field.field.node.game.field_game_type
     - field.field.node.game.field_games_category
@@ -92,6 +93,14 @@ content:
       format_custom_true: ''
     third_party_settings: {  }
     type: boolean
+    region: content
+  field_game_provider:
+    weight: 116
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_game_title:
     weight: 105
