--- a/web/sites/casino/config/sync/taxonomy_unique.settings.yml
+++ b/web/sites/casino/config/sync/taxonomy_unique.settings.yml
@@ -14,3 +14,5 @@ game_filter: 1
 game_filter_message: 'Term @term already exists in vocabulary @vocabulary.'
 games_collection_type: 1
 games_collection_type_message: 'Term @term already exists in vocabulary @vocabulary.'
+game_provider: 0
+game_provider_message: 'Term @term already exists in vocabulary @vocabulary.'
