add language dropdown in games-gategory sorting page

--- a/web/sites/ptplus/config/sync/views.view.games_category.yml
+++ b/web/sites/ptplus/config/sync/views.view.games_category.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - block.block.languagedropdownswitcher_2
     - field.storage.taxonomy_term.field_publish_date
     - field.storage.taxonomy_term.field_unpublish_date
     - system.menu.admin
@@ -482,6 +483,7 @@ display:
         fields: false
         filters: false
         filter_groups: false
+        header: false
       row:
         type: fields
         options:
@@ -916,6 +918,20 @@ display:
         operator: AND
         groups:
           1: AND
+      header:
+        entity_block:
+          id: entity_block
+          table: views
+          field: entity_block
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          tokenize: true
+          target: languagedropdownswitcher_2
+          view_mode: default
+          bypass_access: false
+          plugin_id: entity
     cache_metadata:
       max-age: 0
       contexts:
