--- a/web/sites/games/config/sync/language.content_settings.taxonomy_term.game_provider.yml
+++ b/web/sites/games/config/sync/language.content_settings.taxonomy_term.game_provider.yml
@@ -4,8 +4,15 @@ status: true
 dependencies:
   config:
     - taxonomy.vocabulary.game_provider
+  module:
+    - content_translation
+third_party_settings:
+  content_translation:
+    enabled: true
+    bundle_settings:
+      untranslatable_fields_hide: '0'
 id: taxonomy_term.game_provider
 target_entity_type_id: taxonomy_term
 target_bundle: game_provider
 default_langcode: site_default
-language_alterable: false
+language_alterable: true
