--- a/web/sites/games/config/sync/field.field.taxonomy_term.game_provider.field_game_provider_key.yml
+++ b/web/sites/games/config/sync/field.field.taxonomy_term.game_provider.field_game_provider_key.yml
@@ -12,7 +12,7 @@ bundle: game_provider
 label: 'Game Provider Key'
 description: ''
 required: true
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
