--- a/web/sites/mobile-live-dealer/config/sync/user.role.anonymous.yml
+++ b/web/sites/mobile-live-dealer/config/sync/user.role.anonymous.yml
@@ -16,6 +16,7 @@ permissions:
   - 'access language hi'
   - 'access language id'
   - 'access language in'
+  - 'access language ja'
   - 'access language km'
   - 'access language ko'
   - 'access language lo'
