[DFLD-82, DFGMS-109, DFARC-85] - Added JP language in Desktop Live Dealer/Games/Arcade

--- a/web/sites/games/config/sync/user.role.anonymous.yml
+++ b/web/sites/games/config/sync/user.role.anonymous.yml
@@ -11,6 +11,7 @@ is_admin: false
 permissions:
   - 'access comments'
   - 'access content'
+  - 'access language bn'
   - 'access language bu'
   - 'access language en'
   - 'access language es'
@@ -21,16 +22,16 @@ permissions:
   - 'access language hi'
   - 'access language id'
   - 'access language in'
+  - 'access language ja'
   - 'access language km'
   - 'access language ko'
   - 'access language lo'
+  - 'access language pk'
   - 'access language pt-br'
   - 'access language te'
   - 'access language th'
   - 'access language vi'
   - 'access language zh-hans'
-  - 'access language bn'
-  - 'access language pk'
   - 'access site-wide contact form'
   - 'administer rest resources'
   - 'restful get affiliate_rest_resource'
