[NBMCCL-26, NBMARC-15] - PGSoft configs for mobile NB slots/arcade

--- a/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider.yml
+++ b/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider.yml
@@ -29,6 +29,9 @@ settings:
     -
       value: solid_gaming
       label: 'Solid Gaming'
+    -
+      value: pgsoft
+      label: PGSoft
   allowed_values_function: ''
 module: options
 locked: false
