--- a/web/sites/mobile-nextbet/config/sync/field.field.node.games_slots.field_game_code.yml
+++ b/web/sites/mobile-nextbet/config/sync/field.field.node.games_slots.field_game_code.yml
@@ -10,7 +10,7 @@ field_name: field_game_code
 entity_type: node
 bundle: games_slots
 label: 'Game Code'
-description: "<p>iCore game detail to use per provider:</p>\r\n<ul>\r\n<li><strong>Skywind:</strong> GameId</li>\r\n<li><strong>Voidbridge:</strong> ExternalGameId|ProviderProduct <small><span style=\"color: #333333;\">(nextbet-games)</span></small></li>\r\n<li><strong>Playtech:</strong> GameId</li>\r\n<li><strong>CQ9:</strong> ExternalGameId|ProviderProduct <small><span style=\"color: #333333;\">(nextbet-games)</span></small></li>\r\n<li><strong>Microgaming:</strong> ExternalGameId|ProviderProduct <small><span style=\"color: #333333;\">(nextbet-slots)</span></small></li>\r\n<li><strong>Solid Gaming:</strong> ExternalGameId|ProviderProduct <small><span style=\"color: #333333;\">(nextbet-slots)</span></small></li>\r\n</ul>"
+description: "<p>iCore game detail to use per provider:</p>\r\n<ul>\r\n<li><strong>Skywind:</strong> GameId</li>\r\n<li><strong>Voidbridge:</strong> ExternalGameId|ProviderProduct <small><span style=\"color: #333333;\">(nextbet-games)</span></small></li>\r\n<li><strong>Playtech:</strong> GameId</li>\r\n<li><strong>CQ9:</strong> ExternalGameId|ProviderProduct <small><span style=\"color: #333333;\">(nextbet-games)</span></small></li>\r\n<li><strong>Microgaming:</strong> ExternalGameId|ProviderProduct <small><span style=\"color: #333333;\">(nextbet-slots)</span></small></li>\r\n<li><strong>Solid Gaming:</strong> ExternalGameId|ProviderProduct <small><span style=\"color: #333333;\">(nextbet-slots)</span></small></li>\r\n<li><strong>PGSoft:</strong> ExternalGameId|ProviderProduct <small><span style=\"color: #333333;\">(nextbet-slots)</span></small></li>\r\n</ul>"
 required: true
 translatable: false
 default_value: {  }
