--- a/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider_arcade.yml
+++ b/web/sites/mobile-nextbet/config/sync/field.storage.node.field_game_provider_arcade.yml
@@ -26,6 +26,9 @@ settings:
     -
       value: solid_gaming
       label: 'Solid Gaming'
+    -
+      value: pgsoft
+      label: PGSoft
   allowed_values_function: ''
 module: options
 locked: false
