--- a/web/sites/ptplus/config/sync/field.field.taxonomy_term.games_category.field_game_tile_image_size.yml
+++ b/web/sites/ptplus/config/sync/field.field.taxonomy_term.games_category.field_game_tile_image_size.yml
@@ -13,7 +13,7 @@ entity_type: taxonomy_term
 bundle: games_category
 label: 'Game Tile Image Size'
 description: ''
-required: false
+required: true
 translatable: false
 default_value:
   -
