--- a/web/sites/ptplus/config/sync/core.entity_form_display.taxonomy_term.games_category.default.yml
+++ b/web/sites/ptplus/config/sync/core.entity_form_display.taxonomy_term.games_category.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.taxonomy_term.games_category.field_enable_pagination
     - field.field.taxonomy_term.games_category.field_enable_show_all
+    - field.field.taxonomy_term.games_category.field_enable_show_all_mobile
     - field.field.taxonomy_term.games_category.field_game_tile_image_size
     - field.field.taxonomy_term.games_category.field_game_tile_layout_row
     - field.field.taxonomy_term.games_category.field_games_alias
@@ -27,7 +28,7 @@ third_party_settings:
         - description
         - field_unpublish_date
       parent_name: ''
-      weight: 10
+      weight: 11
       format_type: details
       format_settings:
         id: ''
@@ -62,6 +63,13 @@ content:
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
+  field_enable_show_all_mobile:
+    weight: 8
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
   field_game_tile_image_size:
     weight: 5
     settings: {  }
@@ -69,7 +77,7 @@ content:
     type: options_select
     region: content
   field_game_tile_layout_row:
-    weight: 8
+    weight: 9
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -91,7 +99,7 @@ content:
     type: image_image
     region: content
   field_platform:
-    weight: 9
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: options_select
